--- a/backend/package.json
+++ b/backend/package.json
@@ -8,23 +8,38 @@
 		"migrate": "knex migrate:latest",
 		"rollback": "knex migrate:rollback",
 		"seed:make": "knex seed:make",
-		"seed": "knex seed:run"
+		"seed": "knex seed:run",
+		"start": "node dist/index.js",
+		"dev": "nodemon src/index.ts",
+		"build": "tsc -p ."
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"axios": "^0.19.2",
+		"compression": "^1.7.4",
 		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"helmet": "^3.23.3",
 		"knex": "^0.21.1",
 		"lodash.chunk": "^4.2.0",
 		"moment": "^2.27.0",
+		"morgan": "^1.10.0",
 		"papaparse": "^5.2.0",
 		"pg": "^8.2.1"
 	},
 	"devDependencies": {
+		"@types/compression": "^1.7.0",
+		"@types/express": "^4.17.7",
+		"@types/helmet": "^0.0.47",
+		"@types/morgan": "^1.9.1",
+		"@types/node": "^14.0.23",
 		"@typescript-eslint/eslint-plugin": "^3.4.0",
 		"@typescript-eslint/parser": "^3.4.0",
-		"eslint": "^7.3.1"
+		"eslint": "^7.3.1",
+		"nodemon": "^2.0.4",
+		"ts-node": "^8.10.2",
+		"typescript": "^3.9.6"
 	}
 }
