--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,11 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"migrate:make": "knex migrate:make",
-		"migrate": "knex migrate:latest",
-		"rollback": "knex migrate:rollback",
-		"seed:make": "knex seed:make",
-		"seed": "knex seed:run",
+		"migrate:make": "knex migrate:make --knexfile knexfile.ts -x ts",
+		"migrate": "knex migrate:latest --knexfile knexfile.ts",
+		"rollback": "knex migrate:rollback --knexfile knexfile.ts",
+		"seed:make": "knex seed:make --knexfile knexfile.ts -x ts",
+		"seed": "knex seed:run --knexfile knexfile.ts",
 		"start": "node dist/index.js",
 		"dev": "nodemon src/index.ts",
 		"build": "tsc -p ."
@@ -33,8 +33,10 @@
 		"@types/compression": "^1.7.0",
 		"@types/express": "^4.17.7",
 		"@types/helmet": "^0.0.47",
+		"@types/lodash.chunk": "^4.2.6",
 		"@types/morgan": "^1.9.1",
 		"@types/node": "^14.0.23",
+		"@types/papaparse": "^5.0.4",
 		"@typescript-eslint/eslint-plugin": "^3.4.0",
 		"@typescript-eslint/parser": "^3.4.0",
 		"eslint": "^7.3.1",
