--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
 		"seed": "knex seed:run --knexfile knexfile.ts",
 		"start": "node dist/index.js",
 		"dev": "nodemon src/index.ts",
-		"build": "tsc -p ."
+		"build": "tsc -p .",
+		"test": "jest"
 	},
 	"keywords": [],
 	"author": "",
@@ -33,14 +34,19 @@
 		"@types/compression": "^1.7.0",
 		"@types/express": "^4.17.7",
 		"@types/helmet": "^0.0.47",
+		"@types/jest": "^26.0.4",
 		"@types/lodash.chunk": "^4.2.6",
 		"@types/morgan": "^1.9.1",
 		"@types/node": "^14.0.23",
 		"@types/papaparse": "^5.0.4",
+		"@types/supertest": "^2.0.10",
 		"@typescript-eslint/eslint-plugin": "^3.4.0",
 		"@typescript-eslint/parser": "^3.4.0",
 		"eslint": "^7.3.1",
+		"jest": "^26.1.0",
 		"nodemon": "^2.0.4",
+		"supertest": "^4.0.2",
+		"ts-jest": "^26.1.2",
 		"ts-node": "^8.10.2",
 		"typescript": "^3.9.6"
 	}
